# free-snake

./: Makefile  Makefile.in  README  aclocal.m4  body.c  config.h.in  configure  configure.ac  draw.c  simple-snake.spec
debian/: README.Debian  changelog  control  copyright
include/: body.h
src/: Makefile.am  Makefile.in  body.c  draw.c
src/include/: body.h
